# Rust_Website

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
project-files/: projects.json
src/: main.rs
src/backend/: app_config.rs  contact.rs  mod.rs  publishers.rs
src/pages/: about.rs  env_context.rs  home.rs  mod.rs  projects.rs
src/utils/: constants.rs
static/: style.css
templates/: about.html  base.html  confirmation.html  contact.html  gallery.html  hello.stpl  home.html  individual_project_base.html  latex.html  project_base.html  projects.html
